testdata/ingress_nlb_dualstack_annotation_ipv6_tg/input/k8s/ing.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: myingress
  annotations:
    zalando.org/aws-load-balancer-type: nlb
    alb.ingress.kubernetes.io/ip-address-type: dualstack
spec:
  rules:
  - host: foo.bar.org
    http:
      paths:
      - backend:
          service:
            name: foo-bar-service
            port:
              name: main-port
        path: /
        pathType: ImplementationSpecific
